# minicrm-rust-slint

./: .editorconfig  .gitignore  .rustfmt.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  clippy.toml  cspell.json  deny.toml
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
.kiro/agent-hooks/: hooks-index.json  performance-monitor.json  test-coverage-monitor.json
.kiro/hooks/: README.md  code-quality-check.kiro.hook  code-quality-on-save.json  dependency-security-check.json  dependency-security-check.kiro.hook  documentation-auto-update.json  import-hooks.sh  kiro-hooks-config.yaml  pre-commit-quality-gate.json  pre-commit-quality-gate.kiro.hook  quick-setup.sh  refactoring-advisor.json  test-coverage-monitor.kiro.hook
.kiro/specs/minicrm-rust-slint/: code-standards-slint.md  code-standards.md  dashboard-design.md  dependencies-analysis.md  design.md  requirements.md  tasks.md
.kiro/steering/: code-generation-guidelines.md
.qoder/rules/: rules.md
crates/application/: Cargo.toml
crates/application/src/: commands.rs  handlers.rs  lib.rs  queries.rs
crates/core/: Cargo.toml
crates/core/src/: entity.rs  error.rs  lib.rs  repository.rs  service.rs  types.rs
crates/domain/: Cargo.toml
crates/domain/src/: entities.rs  lib.rs  services.rs  validators.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: lib.rs
crates/infrastructure/src/database/: connection.rs  health.rs  migrations.rs  mod.rs  pool.rs
crates/infrastructure/src/repository/: generic.rs  mod.rs
crates/presentation/: Cargo.toml
crates/presentation/src/: controllers.rs  lib.rs  view_models.rs
scripts/: pre-commit.sh
src/: app.rs  config.rs  database.rs  error.rs  lib.rs  main.rs
tests/: database_integration.rs
ui/: main_window.slint
ui/components/: mod.slint
